--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ charset-normalizer==2.1.0
 frozenlist==1.3.1
 idna==3.3
 multidict==6.0.2
-py-cord>=2.0.1
+py-cord==2.1.1
+pycord-multicog==1.0.2
 yarl==1.8.1
